# Moutous

./: .gitignore  CMakeLists.txt  README.md  clean_list_file.py  main  main.cpp  makefile  motus.cpp  rebuild.sh  resources.rc  utiles.cpp
includes/: game.h  librairies.h  motus.h  utiles.h
misc/images/background/: bg_chargement_template.pdn
misc/images/lettres/: lettres_template.pdn
misc/mots/: liste_FREELANG_FR_raw.txt  liste_mots_FR.txt  liste_mots_simple_FR.txt  liste_moutous_FR.txt
other/: clean_list_file.py  generate_list.py
other/listes_mots/: liste_FREELANG_FR.txt  liste_mots_simple_FR.txt  liste_moutous_FR_raw.txt  petit_larousse_FR.txt
src/: game.cpp  main.cpp  motus.cpp  utiles.cpp
